@@ -398,6 +398,10 @@ If don't have a clue where the cor of your motion rig is supposed to be, you can
 </thead>
 <tbody>
 <tr>
+<td style="text-align: left;"><code>NONE</code></td>
+<td style="text-align: left;">don't assign any keys (cannot be combined with other keys)</td>
+</tr>
+<tr>
 <td style="text-align: left;"><code>SHIFT</code></td>
 <td style="text-align: left;">shift key</td>
 </tr>
